[gd_scene load_steps=4 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://imagens/fruit1.png" type="Texture" id=3]

[node name="Node2D" type="Node2D"]
position = Vector2( 400, 400 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 403.0
margin_top = -141.0
margin_right = 435.0
margin_bottom = -121.0
text = "1"

[node name="Button2" type="Button" parent="."]
margin_left = 403.0
margin_top = -113.0
margin_right = 444.0
margin_bottom = -93.0
text = "2"

[node name="Button3" type="Button" parent="."]
margin_left = 403.0
margin_top = -85.0
margin_right = 449.0
margin_bottom = -65.0
text = "3"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 403.0
margin_top = -180.0
margin_right = 617.0
margin_bottom = -156.0

[node name="Label" type="Label" parent="."]
margin_left = 404.0
margin_top = -195.0
margin_right = 617.0
margin_bottom = -181.0

[node name="Label2" type="Label" parent="."]
margin_left = 404.0
margin_top = -218.0
margin_right = 617.0
margin_bottom = -204.0

[node name="Inventario" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 11.5, 5.46875 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Fruit1" type="Sprite" parent="Inventario"]
position = Vector2( -19.2174, 1.09715 )
scale = Vector2( 0.0869565, 0.182857 )
texture = ExtResource( 3 )

[node name="Fruit2" type="Sprite" parent="Inventario"]
position = Vector2( -0.347839, -22.1257 )
scale = Vector2( 0.0869565, 0.182857 )
texture = ExtResource( 3 )

[node name="Fruit3" type="Sprite" parent="Inventario"]
position = Vector2( 19.2174, 1.28 )
scale = Vector2( 0.0869565, 0.182857 )
texture = ExtResource( 3 )

[node name="Label1" type="Label" parent="Inventario"]
margin_left = -17.4783
margin_top = -4.20571
margin_right = -6.47826
margin_bottom = 10.7943
text = "1"

[node name="Label2" type="Label" parent="Inventario"]
margin_left = 1.3913
margin_top = -27.4286
margin_right = 12.3913
margin_bottom = -12.4286
text = "1"

[node name="Label3" type="Label" parent="Inventario"]
margin_left = 20.9565
margin_top = -4.02286
margin_right = 31.9565
margin_bottom = 10.9771
text = "1"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
